--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="styles.css">
     <!-- js -->
@@ -26,7 +27,7 @@
 <body>
     <!-- header -->
     <header id="header">
-        <div class="nav-bar" id="navbar">
+        <div class="nav-bar navbar-inverse" id="navbar">
             <div class="logo"><a href="">LBC Turistico</a></div>
             <ul class="links">
                 <li><a href="#">Home</a></li>
