--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- contenido del html -->
     <main>
         <div class="conteiner-lg">
-            <img class="img-top" src="img/imagen-2.png" alt="">
+            <!-- <img class="img-top" src="" alt=""> -->
             <div class="descripcion">
                 <h1>Mono Feliz</h1>
                 <p>Mono Feliz se ubica a unos 34 kilómetros al sur de Puerto Armuelles, en Punta Burica. Actualmente se
@@ -107,15 +107,15 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://30yahoraque.files.wordpress.com/2019/10/img_6939.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="90%">
+                        alt="..." height="450px" width="80%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://30yahoraque.files.wordpress.com/2019/10/img_7075.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="90%">
+                        alt="..." height="450px" width="80%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://30yahoraque.files.wordpress.com/2019/10/img_7146.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="90%">
+                        alt="..." height="450px" width="80%">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
