--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
-                    <h5 class="item-title">Persona</h5>
+                    <h5 class="item-title">Guillermo Gonzales</h5>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
@@ -307,7 +307,7 @@
                     class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
-                    <h5 class="item-title">Persona</h5>
+                    <h5 class="item-title">Enier Arauz</h5>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
@@ -320,7 +320,7 @@
                     class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
-                    <h5 class="item-title">Persona</h5>
+                    <h5 class="item-title">Natanael Quiroz</h5>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
@@ -333,7 +333,70 @@
                     class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
-                    <h5 class="item-title">Persona</h5>
+                    <h5 class="item-title">Jean Quintero</h5>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+
+            <div class="item" style="width: 10rem;">
+                <img src="img/abdiel.jpg"
+                    class="item-img" alt="">
+                <div class="item-body">
+                    <p>Redes Sociales</p>
+                    <h5 class="item-title">Abdiel Montezuma</h5>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="item" style="width: 10rem;">
+                <img src="img/didacio.jpg"
+                    class="item-img" alt="">
+                <div class="item-body">
+                    <p>Redes Sociales</p>
+                    <h5 class="item-title">Didacio Pineda</h5>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="item" style="width: 10rem;">
+                <img src="img/eilian.jpg"
+                    class="item-img" alt="">
+                <div class="item-body">
+                    <p>Redes Sociales</p>
+                    <h5 class="item-title">Eilian Hernandez</h5>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+
+            <div class="item" style="width: 10rem;">
+                <img src="img/"
+                    class="item-img" alt="">
+                <div class="item-body">
+                    <p>Redes Sociales</p>
+                    <h5 class="item-title">Imano Aparicio</h5>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+
+            <div class="item" style="width: 10rem;">
+                <img src="img/erick.jpg"
+                    class="item-img" alt="">
+                <div class="item-body">
+                    <p>Redes Sociales</p>
+                    <h5 class="item-title">Erick Gonzales</h5>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
