--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </section>
         </div>
         <hr>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleAutoplaying" class="carousel" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="img/img-pisina.jpg" class="d-block w-100"
