--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <img src="img/img-cama.jpg" alt="">
                         <img src="img/img-cabana.jpg" alt="">
                         <p>
-                            los visitantes se encontrarán con una variedad de opciones de alojamiento que van desde
+                            Los visitantes se encontrarán con una variedad de opciones de alojamiento que van desde
                             acogedoras cabañas hasta áreas de camping que permiten una inmersión total en la naturaleza
                             circundante. Además de estas comodidades, se ofrecen una serie de servicios y actividades
                             diseñadas para enriquecer la experiencia del visitante.</p>
@@ -247,15 +247,15 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="img/img-pisina.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="80%">
+                        alt="..." height="450px" width="60%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://30yahoraque.files.wordpress.com/2019/10/img_7075.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="80%">
+                        alt="..." height="450px" width="60%">
                 </div>
                 <div class="carousel-item">
                     <img src="img/img-fondo.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="80%">
+                        alt="..." height="450px" width="60%">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
