--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Active</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#Ubicacion">Ubicacion</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -171,6 +171,7 @@
                         <img src="img/img-pisina.jpg" alt="">
                         <img src="img/img-playa.jpg" alt="">
                         <img src="img/img-puertsass.jpg" alt="">
+                        <img src="img/saten.jpg" alt="">
                     </div>
                 </div>
                 <hr>
@@ -188,7 +189,7 @@
                     <hr>
                     <div class="centro-2">
                         <img src="img/img-gastro.jpg" alt="">
-                        <img src="img/img-platillos.jpg" alt="" height="200px">
+                        <img src="img/comida.jpg" alt="" height="210px">
                         <p>Gurmet<br>
                             Para aquellos que deseen deleitar su paladar, la cocina local ofrece una auténtica
                             experiencia gastronómica, con platos preparados con ingredientes frescos y sabores
