--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                         <img src="img/img-playa.jpg" alt="">
                         <img src="img/img-puertsass.jpg" alt="">
                         <img src="img/saten.jpg" alt="">
+                        <img src="img/fomdo.jpg" alt="">
                     </div>
                 </div>
                 <hr>
