--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
+                <a class="navbar-brand" href="#">Puerto Armuelles</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -57,13 +57,13 @@
                 </button>
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Ubicacion">Ubicacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#Contacto">Contactanos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -73,7 +73,7 @@
                     aria-labelledby="offcanvasDarkNavbarLabel">
 
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Puerto Armuelles</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
@@ -84,21 +84,10 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="#Ubicacion">Ubicacion</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#Contacto">Contactanos</a>
                             </li>
                         </ul>
                     </div>
@@ -290,7 +279,7 @@
     <hr>
     <!-- footer -->
     <footer>
-        <div class="footer-item">
+        <div class="footer-item" id="Contacto">
             <div class="item" style="width: 10rem;">
                 <img src="https://media-mia3-2.cdn.whatsapp.net/v/t61.24694-24/424425328_947218480137746_7517708851917175498_n.jpg?ccb=11-4&oh=01_ASAxV-tKCJaeTf7NV8L1tbqPhrBn6H_2WymzCQM3zt6VWA&oe=66198196&_nc_sid=e6ed6c&_nc_cat=111"
                     class="item-img" alt="">
