--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                 </div>
             </div>
         </nav>
+        <div class="wrap-hero-section">
+            <h1>MONO FELIZ</h1>
+        </div>
     </header>
 
     <!-- contenido del html -->
@@ -126,33 +129,34 @@
                     plazo.Preservar la diversidad genética: La variabilidad genética dentro de las poblaciones de
                     especies es crucial para su adaptabilidad y resistencia a cambios ambientales. Conservar esta
                     diversidad genética ayuda a garantizar la supervivencia de las especies a largo plazo.
-<br><br>
+                    <br><br>
                     Proteger especies en peligro de extinción: Muchas especies enfrentan amenazas como la pérdida de
                     hábitat, la contaminación, la caza furtiva y el cambio climático, lo que las coloca en peligro de
                     extinción. La conservación de la biodiversidad se centra en identificar y proteger a estas especies
                     en riesgo de desaparecer.
-<br><br>
+                    <br><br>
                     Mantener la integridad de los ecosistemas: Los ecosistemas sanos son fundamentales para la vida en
                     la Tierra, ya que proporcionan servicios ecosistémicos vitales como la regulación del clima, la
                     purificación del agua, la polinización de cultivos y la prevención de la erosión del suelo. La
                     conservación de la biodiversidad busca mantener la estructura y función de los ecosistemas para
                     garantizar su sostenibilidad a largo plazo.
-<br><br>
+                    <br><br>
                     Promover el uso sostenible de los recursos naturales: La conservación de la biodiversidad reconoce
                     la importancia de utilizar los recursos naturales de manera sostenible, de modo que se satisfagan
                     las necesidades presentes sin comprometer la capacidad de las generaciones futuras para satisfacer
                     sus propias necesidades.
-<br><br>
+                    <br><br>
                     Fomentar la investigación y la educación: La comprensión de la biodiversidad y los procesos que la
                     sustentan es fundamental para su conservación. Por lo tanto, se promueve la investigación científica
                     y la educación ambiental para aumentar la conciencia sobre la importancia de la biodiversidad y las
-                    acciones necesarias para protegerla.</p>
+                    acciones necesarias para protegerla.
+                </p>
                 <hr>
                 <div class="container-md">
                     <div class="galeria">
                         <img src="img/ataredecer.jpg" alt="">
                         <img src="img/img-cabama2.jpg" alt="">
-                      <img src="img/img-gastro-1.jpg" alt="">
+                        <img src="img/img-gastro-1.jpg" alt="">
                         <img src="img/img-cabnaa.jpg" alt="">
                         <img src="img/img-cahngos2.jpg" alt="">
                         <img src="img/img-fondo-1.jpg" alt="">
@@ -201,7 +205,8 @@
                     exuberante de Panamá, sino que también representa un compromiso con la sostenibilidad y la
                     conservación del medio ambiente. Ya sea que esté buscando aventura, relajación o simplemente una
                     conexión más profunda con la naturaleza, aquí encontrará todo lo que necesita para una experiencia
-                    verdaderamente inolvidable. ¡Le damos la bienvenida a descubrir el paraíso en Punta Burica!. La colaboración entre organizaciones de conservación, gobiernos locales y
+                    verdaderamente inolvidable. ¡Le damos la bienvenida a descubrir el paraíso en Punta Burica!. La
+                    colaboración entre organizaciones de conservación, gobiernos locales y
                     comunidades locales es fundamental para garantizar la protección a largo plazo de esta
                     especie y su hábitat en la región del Golfo de Chiriquí
                 </p>
@@ -214,7 +219,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Mono Titi</h5>
                             <p class="card-text"> <i class="fa-solid fa-play"></i>Esta especie se encuentra en peligro
-                                principalmente debido a la pérdida de su hábitat natural, la fragmentación de su territorio y la caza ilegal.
+                                principalmente debido a la pérdida de su hábitat natural, la fragmentación de su
+                                territorio y la caza ilegal.
                                 La preservación de estos bosques secundarios no solo beneficia a los monos tití, sino
                                 también a muchas otras especies de flora y fauna que dependen de este hábitat para su
                                 supervivencia..</p>
@@ -237,16 +243,14 @@
         <div id="carouselExampleAutoplaying" class="carousel" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/img-pisina.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="60%">
+                    <img src="img/img-pisina.jpg" class="d-block w-100" alt="..." height="450px" width="60%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://30yahoraque.files.wordpress.com/2019/10/img_7075.jpg" class="d-block w-100"
                         alt="..." height="450px" width="60%">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/img-fondo.jpg" class="d-block w-100"
-                        alt="..." height="450px" width="60%">
+                    <img src="img/img-fondo.jpg" class="d-block w-100" alt="..." height="450px" width="60%">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -307,8 +311,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/ntanael.jpg"
-                    class="item-img" alt="">
+                <img src="img/ntanael.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Natanael Quiroz</h5>
@@ -320,8 +323,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/jean.jpg"
-                    class="item-img" alt="">
+                <img src="img/jean.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Jean Quintero</h5>
@@ -333,8 +335,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/abdiel.jpg"
-                    class="item-img" alt="">
+                <img src="img/abdiel.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Abdiel Montezuma</h5>
@@ -345,8 +346,7 @@
                 </div>
             </div>
             <div class="item" style="width: 10rem;">
-                <img src="img/didacio.jpg"
-                    class="item-img" alt="">
+                <img src="img/didacio.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Didacio Pineda</h5>
@@ -357,8 +357,7 @@
                 </div>
             </div>
             <div class="item" style="width: 10rem;">
-                <img src="img/eilian.jpg"
-                    class="item-img" alt="">
+                <img src="img/eilian.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Eilian Hernandez</h5>
@@ -370,8 +369,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/"
-                    class="item-img" alt="">
+                <img src="img/" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Imano Aparicio</h5>
@@ -383,8 +381,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/erick.jpg"
-                    class="item-img" alt="">
+                <img src="img/erick.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Erick Gonzales</h5>
