--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </nav>
         <div class="wrap-hero-section">
-            <h1>MONO FELIZ</h1>
+            <h1>HAPPY MONKEY</h1>
         </div>
     </header>
 
