--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
 
             <div class="item" style="width: 10rem;">
-                <img src="img/" class="item-img" alt="">
+                <img src="img/imannol.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Imano Aparicio</h5>
