--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-item" id="Contacto">
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="https://media-mia3-2.cdn.whatsapp.net/v/t61.24694-24/424425328_947218480137746_7517708851917175498_n.jpg?ccb=11-4&oh=01_ASAxV-tKCJaeTf7NV8L1tbqPhrBn6H_2WymzCQM3zt6VWA&oe=66198196&_nc_sid=e6ed6c&_nc_cat=111"
                     class="item-img" alt="">
                 <div class="item-body">
@@ -297,7 +297,7 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="https://media-mia3-2.cdn.whatsapp.net/v/t61.24694-24/411376622_333219796312650_3114120008729656554_n.jpg?ccb=11-4&oh=01_ASC5dewmC_f1r1xCBq8fOp0cjBp6vq_RP6cB9r2FFaowUA&oe=6619984B&_nc_sid=e6ed6c&_nc_cat=106"
                     class="item-img" alt="">
                 <div class="item-body">
@@ -310,7 +310,7 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/ntanael.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
@@ -322,7 +322,7 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/jean.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
@@ -334,7 +334,7 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/abdiel.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
@@ -345,7 +345,7 @@
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/didacio.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
@@ -356,7 +356,7 @@
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/eilian.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
@@ -368,11 +368,11 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/imannol.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
-                    <h5 class="item-title">Imano Aparicio</h5>
+                    <h5 class="item-title">Imanol Aparicio</h5>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
@@ -380,7 +380,7 @@
                 </div>
             </div>
 
-            <div class="item" style="width: 10rem;">
+            <div class="item">
                 <img src="img/erick.jpg" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
