--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             </div>
             <div class="card-ubi">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9758.960242085359!2d-82.8537803014268!3d8.283809031723912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spa!4v1711548258955!5m2!1ses!2spa"
-                    width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6983997007383!2d-82.87618602499244!3d8.029999991996752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa5218638316385%3A0x8c0908d07ba738b1!2sMono%20feliz!5e0!3m2!1ses-419!2spa!4v1712594792369!5m2!1ses-419!2spa"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="card-ubi-text">
@@ -285,8 +285,7 @@
     <footer>
         <div class="footer-item" id="Contacto">
             <div class="item">
-                <img src="https://media-mia3-2.cdn.whatsapp.net/v/t61.24694-24/424425328_947218480137746_7517708851917175498_n.jpg?ccb=11-4&oh=01_ASAxV-tKCJaeTf7NV8L1tbqPhrBn6H_2WymzCQM3zt6VWA&oe=66198196&_nc_sid=e6ed6c&_nc_cat=111"
-                    class="item-img" alt="">
+                <img src="" class="item-img" alt="">
                 <div class="item-body">
                     <p>Redes Sociales</p>
                     <h5 class="item-title">Guillermo Gonzales</h5>
