--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     </main>
     <hr>
     <!-- footer -->
-    <footer>
+    <!-- <footer>
         <div class="footer-item" id="Contacto">
             <div class="item">
                 <img src="" class="item-img" alt="">
@@ -391,7 +391,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
