--- a/index.html
+++ b/index.html
@@ -392,7 +392,53 @@
             </div>
         </div>
     </footer> -->
+    <footer>
+        <div class="conteniner-footer">
+            <p class="logo"><i class="fa-solid fa-shop" style="color: white;"></i><a style="color: wheat;">The
+                    Blessed</a></p>
+        </div>
 
+        <div class="text-description">
+            <h3>REDES SOCIALES</h3>
+            <p> ¡Nuestras redes sociales! para obtener actualizaciones en tiempo real, promociones exclusivas y
+                contenido detrás de escena. Únete a nuestra comunidad.</p>
+        </div>
+
+        <div class="conteiner-social" id="Contacto">
+            <h3>SIGUENOS</h3>
+            <div class="social-icon">
+                <a href="https://twitter.com/?lang=es">
+                    <i class="fa-brands fa-twitter social"></i></a>
+                <span style="margin-right: 10px;">Twitter</span>
+            </div>
+            <div class="social-icon">
+                <a href="https://www.facebook.com/">
+                    <i class="fa-brands fa-facebook social"></i></a>
+                <span>Facebook</span>
+            </div>
+            <div class="social-icon">
+                <a href="https://www.instagram.com/">
+                    <i class="fa-brands fa-instagram social"></i></a>
+                <span>Instagram</span>
+            </div>
+            <div class="social-icon">
+                <a href="https://github.com/ligmaster3/Empresa-turistica.git">
+                    <i class="fa-brands fa-github social"></i></a>
+                <span style="margin-left: 30px;">Github</span>
+            </div>
+        </div>
+
+        <div class="conteiner-politicas">
+            <ul class="nav justify-content-center">
+                <a class="nav-link" href="#">License</a>
+                <a class="nav-link" href="#">Terms of Services</a>
+                <a class="nav-link" href="#">Privacy Polity</a>
+                <a class="nav-link" href="#">Refounds</a>
+            </ul>
+            <p>Copyright © 2024 <a class="links" href="#">The Blessed</a> All Rights Reserved </p>
+        </div>
+        <hr class="featurette-divider">
+    </footer>
 </body>
 
 </html>
