--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </div>
 
         <div class="conteiner-politicas">
-            <ul class="nav justify-content-center">
+            <ul class="nav justify-content-center" style="display: flex;">
                 <a class="nav-link" href="#">License</a>
                 <a class="nav-link" href="#">Terms of Services</a>
                 <a class="nav-link" href="#">Privacy Polity</a>
@@ -437,7 +437,6 @@
             </ul>
             <p>Copyright © 2024 <a class="links" href="#">The Blessed</a> All Rights Reserved </p>
         </div>
-        <hr class="featurette-divider">
     </footer>
 </body>
 
