--- a/index.html
+++ b/index.html
@@ -160,12 +160,24 @@
                         <img src="img/img-cabnaa.jpg" alt="">
                         <img src="img/img-cahngos2.jpg" alt="">
                         <img src="img/img-fondo-1.jpg" alt="">
-                        <img src="img/img-fondo.jpg" alt="">
-                        <img src="img/img-pisina.jpg" alt="">
-                        <img src="img/img-playa.jpg" alt="">
-                        <img src="img/img-puertsass.jpg" alt="">
-                        <img src="img/saten.jpg" alt="">
-                        <img src="img/fomdo.jpg" alt="">
+                        <section>
+                            <div class="div">
+                                <h2>COdigio 1</h2>
+                                <img src="Captura de pantalla 2024-09-07 184209.png" alt="">
+                            </div>
+                            <div class="div">
+                                <h2>COdigio 2</h2>
+                                <img src="Captura de pantalla 2024-09-07 184121.png" alt="">
+                            </div>
+                        </section>
+                        <section>
+<div class="container">
+    <h3>
+        Hoteles
+    </h3>
+    <a href=""></a>
+</div>
+                        </section>
                     </div>
                 </div>
                 <hr>
