--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
                             </div>
                         </section>
                         <section>
-<div class="container">
-    <h3>
-        Hoteles
-    </h3>
-    <a href=""></a>
-</div>
+                            <div class="container">
+                                <h3>
+                                    Hoteles
+                                </h3>
+                                <a href=""></a>
+                            </div>
                         </section>
                     </div>
                 </div>
@@ -236,6 +236,11 @@
                                 La preservación de estos bosques secundarios no solo beneficia a los monos tití, sino
                                 también a muchas otras especies de flora y fauna que dependen de este hábitat para su
                                 supervivencia..</p>
+                                <button class="social">
+                                    <a href="https://github.com/ligmaster3/Lab-IA">
+                                        
+                                    </a>
+                                </button>
                         </div>
                     </div>
                     <div class="card" style="width: 17rem;">
@@ -247,6 +252,11 @@
                                 America Central y el sur. Es una de la las especie de mono que se ven y escuchan con
                                 mayor frecuencia en la naturaleza en America Central. Toma nombre de "manto" de lo
                                 largos pelos de proteccion en sus costados .</p>
+                                <button class="social">
+                                    <a href="https://ligmaster3.github.io/proyecto-prototipo-emprendimiento/">
+                                        
+                                    </a>
+                                </button>
                         </div>
                     </div>
             </section>
