--- a/index.html
+++ b/index.html
@@ -236,10 +236,8 @@
                                 La preservación de estos bosques secundarios no solo beneficia a los monos tití, sino
                                 también a muchas otras especies de flora y fauna que dependen de este hábitat para su
                                 supervivencia..</p>
-                                <button class="social">
-                                    <a href="https://github.com/ligmaster3/Lab-IA">
-                                        
-                                    </a>
+                                <button>
+                                    <a class="social" href="https://github.com/ligmaster3/Lab-IA"></a>
                                 </button>
                         </div>
                     </div>
@@ -252,10 +250,8 @@
                                 America Central y el sur. Es una de la las especie de mono que se ven y escuchan con
                                 mayor frecuencia en la naturaleza en America Central. Toma nombre de "manto" de lo
                                 largos pelos de proteccion en sus costados .</p>
-                                <button class="social">
-                                    <a href="https://ligmaster3.github.io/proyecto-prototipo-emprendimiento/">
-                                        
-                                    </a>
+                                <button>
+                                    <a class="social" href="https://ligmaster3.github.io/proyecto-prototipo-emprendimiento/"></a>
                                 </button>
                         </div>
                     </div>
